# bigapple-liveos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.remote-dev.yml  manage.py  pyproject.toml  remote-check-dev.sh  remote-logs-dev.sh  remote-start-dev.sh  remote-stop-dev.sh  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
applications/: __init__.py  apps.py  forms.py  simulation_metadata.py  tests.py  urls.py  views.py
core/: access.py  admin.py  admin_applications.py  admin_events.py  admin_finance.py  admin_identity.py  admin_operations.py  admin_proposals.py  admin_support.py  application_services.py  apps.py  credential_services.py  db.py  dispute_services.py  event_ledger.py  event_payloads.py  exceptions.py  feedback_services.py  finance_services.py  finance_setup.py  governance_setup.py  governance_signals.py  id_generators.py  identity_services.py  ledger_services.py  member_profile_services.py  member_roles.py  permission_services.py  procurement_challenge_services.py  procurement_services.py  proposal_services.py  resource_matching.py  resource_services.py  risk_services.py  role_assignment_services.py  service_utils.py
docs/: ADMIN.md  AI_DEVELOPMENT_GUIDE.md  API.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  GOVERNANCE_INTERACTION_BOUNDARY.md  MEMBER_WORKSPACE.md  MYSQL_MIGRATION.md  OBSERVER.md  OPERATIONS.md  PRODUCT_PLANNING.md  PROJECT_PLAN.md  ROADMAP.md  SIMULATION.md  theme-system.md
worlds/: db.py  (+12 more)
(+358 files in other folders)
